add_executable(doubly_linked_list_test doubly_linked_list_test.c)
add_executable(ring_buffer_test ring_buffer_test.c)
add_executable(quicksort_test quicksort_test.c)

target_link_libraries(doubly_linked_list_test PRIVATE doubly_linked_list)
target_link_libraries(ring_buffer_test PRIVATE ring_buffer)
target_link_libraries(quicksort_test PRIVATE quicksort)

add_test(NAME run_doubly_linked_list_test COMMAND doubly_linked_list_test)
add_test(NAME run_ring_buffer_test COMMAND ring_buffer_test)
add_test(NAME run_quicksort_test COMMAND quicksort_test)
